--- a/LoL_Laning.ipynb
+++ b/LoL_Laning.ipynb
@@ -31,6 +31,13 @@
     },
     {
       "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "89vq_87YJr0L"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "**INTUITION:** Naturally, since league is a PvP game it would make sense that we can maybe use some game theory to develop an intuition behind how we should act. Although the actual game is far more complex than this brief introduction will model, im hoping it will atleast help allow some understanding behind how we *should* play\n",
         "\n",
@@ -43,125 +50,217 @@
         "1.   We will ignore the *micro* behind trading. So let's assume both players are equally skilled, and act appropriately enough to where this is not a factor.\n",
         "\n",
         "2.   Sophistications that are kinda champion specific, e.g. item spikes, level-up timers, so on and so forth are too difficult to model and unnecessary for our purposes\n",
+        "<br>\n",
+        "<br>\n",
         "\n",
-        "**MODEL:** This will be a symmetric repeated game with 4 actions and 3 state variables.\n",
-        "\n",
-        "**States:** $$\n",
-        "S_t = (w_t,\\; m_t,\\; v_t,\\; g_t)\n",
-        "$$\n",
-        "\n",
-        "where\n",
-        "\n",
-        "- $w_t \\in \\{-2,\\,-1,\\,0,\\,1,\\,2\\}$: wave position (- means pushed in, + means pushed out)\n",
-        "- $m_t \\in \\{-1,\\,0,\\,1\\}$: wave size / stack (-1 small, 0 average (e.g. 1 wave; 6-7 minions), 1 large)\n",
-        "- $v_t \\in \\{0,\\,1\\}$: vision (0 no coverage, 1 covered)\n",
-        "- $g_t \\in \\mathbb{R}$: gold difference $=$ (you − enemy)\n",
-        "\n",
-        "**Actions:** $$\n",
-        "A= ({SP,SH,F})\n",
-        "$$\n",
-        "\n",
-        "where\n",
-        "\n",
-        "1.   **SP** (Slow-Push)\n",
-        "2.   **SH** (Hard-Push, i.e. shove)\n",
-        "3.   **F** (Freeze)\n",
-        "\n",
-        "**Transitions:**\n",
-        "\n",
-        "We model laning as a Markov process. Given current state $s_t$ and both players' actions $(a_t, b_t)$, the next state is drawn from:\n",
+        "# **MODEL:** We model laning as a **repeated 2-player game** played over discrete turns (waves)\n",
         "\n",
         "$$\n",
-        "P(s_{t+1}\\mid s_t, a_t, b_t).\n",
+        "t = 0,1,\\dots,T-1.\n",
         "$$\n",
         "\n",
-        "**Rewards:**\n",
-        "\n",
-        "We want our rewards to just be a function that interprets value for plates/cs/denying the enemy (+ value) combined with a function that interprets value for the risks we take, (- value).\n",
-        "Essentially its just a function that increases with good laning, and decreases if ganks become more probable:\n",
-        "\n",
-        "$$\n",
-        "r(s_t,a_t,b_t) \\;=\\; r_{\\text{lane}}(s_t,a_t,b_t)\\;-\\; L \\cdot \\text{gank}_t .\n",
-        "$$\n",
+        "Each turn, both players choose an action simultaneously. The lane state updates, and each player receives a reward.\n",
         "\n",
         "---\n",
         "\n",
+        "## 1) **State Variables**\n",
         "\n",
-        "#### Action pressure\n",
+        "At turn $t$, the lane state is:\n",
         "\n",
-        "Let each action produce \"lane pressure\" $\\Delta w(\\cdot)$:\n",
+        "$$\n",
+        "s_t = (w_t,\\; m_t,\\; v_t,\\; g_t)\n",
+        "$$\n",
+        "\n",
+        "where:\n",
+        "\n",
+        "- $w_t \\in \\{-2,-1,0,1,2\\}$: **wave position**  \n",
+        "  (negative = closer to you, positive = closer to enemy)\n",
+        "\n",
+        "- $m_t \\in \\{0,1,2\\}$: **wave stack size**  \n",
+        "  (0 = normal wave, 2 = large stacked wave)\n",
+        "\n",
+        "- $v_t \\in \\{0,1\\}$: **vision indicator**  \n",
+        "  ($v_t=1$ = you have vision, $v_t=0$ = no vision)\n",
+        "\n",
+        "- $g_t \\in \\mathbb{R}$: **advantage / gold difference proxy** (you − enemy)\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 2) **Actions**\n",
+        "\n",
+        "Action set:\n",
+        "\n",
+        "$$\n",
+        "\\mathcal{A}=\\{\\text{SP},\\text{SH},\\text{F}\\}\n",
+        "$$\n",
+        "\n",
+        "- $\\text{SP}$: slow-push (build a stacked wave)  \n",
+        "- $\\text{SH}$: shove (fast push / crash now)  \n",
+        "- $\\text{F}$: freeze (hold wave on your side; deny/safe)\n",
+        "\n",
+        "Let your action be $a_t$, and the opponent's action be $b_t$.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 3) **Vision Update** (Random)\n",
+        "\n",
+        "Vision refreshes each turn as a Bernoulli random variable:\n",
+        "\n",
+        "$$\n",
+        "v_{t+1} \\sim \\mathrm{Bernoulli}(p_v)\n",
+        "$$\n",
+        "\n",
+        "so $\\Pr(v_{t+1}=1)=p_v$.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 4) **Transition Model**\n",
+        "\n",
+        "### 4.1 *Action pressure*\n",
+        "\n",
+        "Define lane pressure:\n",
         "\n",
         "$$\n",
         "\\Delta w(x)=\n",
         "\\begin{cases}\n",
-        "+1 & x=\\text{SP} \\quad \\text{(slow-push)}\\\\\n",
-        "+2 & x=\\text{SH} \\quad \\text{(shove)}\\\\\n",
-        "-1 & x=\\text{F}  \\quad \\text{(freeze)}\n",
+        "+1 & x=\\text{SP}\\\\\n",
+        "+2 & x=\\text{SH}\\\\\n",
+        "-1 & x=\\text{F}\n",
         "\\end{cases}\n",
         "$$\n",
         "\n",
-        "---\n",
-        "\n",
-        "#### Wave position update\n",
-        "\n",
-        "As an extension to this then, wave position updates based on pressure. This is pretty straightforward with the min/max just to ensure the bounds.\n",
+        "### 4.2 *Wave position update*\n",
         "\n",
         "$$\n",
-        "w_{t+1} = \\mathrm{min}\\Big(\\mathrm{max}(w_t + \\Delta w(a_t) - \\Delta w(b_t),\\; -2),\\; 2\\Big).\n",
+        "w_{t+1}=\\mathrm{min}\\Big({max}(w_t+\\Delta w(a_t)-\\Delta w(b_t),\\,-2),\\,2\\Big)\n",
         "$$\n",
         "\n",
         "\n",
-        "---\n",
-        "\n",
-        "#### Wave size / stack update\n",
-        "\n",
-        "We track wave size $m_t \\in \\{0,1,2\\}$. The rule set is given by:\n",
+        "### 4.3 *Wave stack update*\n",
         "\n",
         "$$\n",
         "m_{t+1}=\n",
         "\\begin{cases}\n",
-        "\\min(2,\\; m_t+1) & a_t=\\text{SP} \\ \\text{and}\\ w_{t+1}<2\\\\[4pt]\n",
-        "0 & a_t=\\text{SH} \\ \\text{and}\\ w_{t+1}=2\\\\[4pt]\n",
-        "\\max(0,\\; m_t-1) & a_t=\\text{F}\\\\[4pt]\n",
+        "\\min(2,\\;m_t+1) & a_t=\\text{SP}\\ \\text{and}\\ w_{t+1}<2\\\\[4pt]\n",
+        "0 & a_t=\\text{SH}\\ \\text{and}\\ w_{t+1}=2\\\\[4pt]\n",
+        "\\max(0,\\;m_t-1) & a_t=\\text{F}\\\\[4pt]\n",
         "m_t & \\text{otherwise}\n",
         "\\end{cases}\n",
         "$$\n",
         "\n",
-        "---\n",
-        "### Vision Update (Bernoulli)\n",
+        "Interpretation:\n",
         "\n",
-        "In league there are many variables that influence vision, and as the laning phase goes on this becomes more and more reliant on jg/supp for mid lane. We thus treat vision coverage as a random variable that refreshes each turn (mostly for simplicity if im being honest):\n",
-        "\n",
-        "$$\n",
-        "v_{t+1} \\sim \\mathrm{Bernoulli}(p_v),\n",
-        "$$\n",
-        "\n",
-        "meaning\n",
-        "\n",
-        "$$\n",
-        "\\Pr(v_{t+1}=1)=p_v,\n",
-        "\\qquad\n",
-        "\\Pr(v_{t+1}=0)=1-p_v,\n",
-        "$$\n",
-        "\n",
-        "where $v_t\\in\\{0,1\\}$ and:\n",
-        "- $v_{t+1}=1$ indicates you have \"appropriate enough\" vision coverage\n",
-        "- $v_{t+1}=0$ indicates you do not\n",
+        "- $\\text{SP}$ Tries to stack your wave over time\n",
+        "- $\\text{SH}$ Tries to crash the wave  \n",
+        "- $\\text{F}$  Tries to freeze\n",
         "\n",
         "---\n",
         "\n",
-        "### Advantage (Gold Difference) Update\n",
+        "## 5) **Interaction Payoff** $M[a,b]$\n",
         "\n",
-        "Let $g_t$ be the running advantage difference (you minus enemy). After both players act, we update:\n",
+        "We include a small \"denial\" payoff based on the action matchup (rock-paper-scissors style). E.g. if we freeze when our opponent shoves, we are rewarded:\n",
+        "\n",
+        "- $\\text{SH}$ counters $\\text{SP}$  \n",
+        "- $\\text{F}$ counters $\\text{SH}$  \n",
+        "- $\\text{SP}$ counters $\\text{F}$  \n",
+        "\n",
+        "For a constant $\\epsilon>0$ (e.g., $\\epsilon=0.3$).\n",
         "\n",
         "$$\n",
-        "g_{t+1} = g_t + \\big(r(s_t,a_t,b_t) - r(s_t,b_t,a_t)\\big).\n",
+        "M[a,b]=\n",
+        "\\begin{cases}\n",
+        "+\\epsilon & a \\text{ counters } b\\\\\n",
+        "-\\epsilon & b \\text{ counters } a\\\\\n",
+        "0 & a=b\n",
+        "\\end{cases}\n",
         "$$\n",
         "\n",
-        "- $r(s_t,a_t,b_t)$ is **your** reward.\n",
-        "- $r(s_t,b_t,a_t)$ is the **opponent's** reward\n",
+        "Payoff table (to the row player):\n",
         "\n",
-        "This works with our assumptions, i.e. your opponents reward is just yours but mirrored.\n",
+        "$$\n",
+        "\\begin{array}{c|ccc}\n",
+        "M[a,b] & b=\\text{SP} & b=\\text{SH} & b=\\text{F}\\\\ \\hline\n",
+        "a=\\text{SP} & 0 & -\\epsilon & +\\epsilon\\\\\n",
+        "a=\\text{SH} & +\\epsilon & 0 & -\\epsilon\\\\\n",
+        "a=\\text{F}  & -\\epsilon & +\\epsilon & 0\n",
+        "\\end{array}\n",
+        "$$\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 6) **Reward Function**\n",
+        "\n",
+        "Per-turn reward to you. Note the use of indicator functions, (e.g. 1 *[condition]).\n",
+        "\n",
+        "$$\n",
+        "r(s_t,a_t,b_t)=M[a_t,b_t] + B_{\\text{plates}} + B_{\\text{deny}} + B_{\\text{crash}} - L\\cdot \\text{gank}_t\n",
+        "$$\n",
+        "\n",
+        "### * 6.1 Plates / pressure bonus (shove on enemy side)*\n",
+        "\n",
+        "$$\n",
+        "B_{\\text{plates}}=\\beta_{\\text{plates}}\\;\\mathbf{1}[a_t=\\text{SH}]\\mathbf{1}[w_t\\ge 1]\n",
+        "$$\n",
+        "\n",
+        "\n",
+        "### * 6.2 Deny / safety bonus (freeze on your side)*\n",
+        "\n",
+        "$$\n",
+        "B_{\\text{deny}}=\n",
+        "\\beta_{\\text{deny}}\\mathbf{1}[a_t=\\text{F}]\\mathbf{1}[w_t\\le -1]\n",
+        "+\n",
+        "\\beta_{\\text{deny,bonus}}\\mathbf{1}[a_t=\\text{F}]\\mathbf{1}[w_t\\le -1]\\mathbf{1}[b_t\\in\\{\\text{SP},\\text{SH}\\}]\n",
+        "$$\n",
+        "\n",
+        "Explanation: We have two terms which may be a unintuitive at first glance. One rewards having the wave on our side since this is safer/more dangerous for the enemy, the second is to encourage this behavior even more in the case that the enemy wants to crash it (e.g. they want to move to a play)\n",
+        "\n",
+        "### * 6.3 Crash bonus (convert a slow-push into a crash)*\n",
+        "\n",
+        "$$\n",
+        "B_{\\text{crash}}=\\beta_{\\text{crash}}\\;\\mathbf{1}[w_{t+1}=2]\\mathbf{1}[m_t=2]\n",
+        "$$\n",
+        "\n",
+        "### * 6.4 Gank penalty (risk when extended with no vision)*\n",
+        "\n",
+        "$$\n",
+        "\\text{gank}_t \\sim \\mathrm{Bernoulli}(p_{\\text{gank}}(s_t,a_t))\n",
+        "$$\n",
+        "\n",
+        "$$\n",
+        "p_{\\text{gank}}(s_t,a_t)=(1-v_t)\\cdot \\mathrm{min}\\Big({max}(q_0 + q_1\\mathbf{1}[w_t=2] + q_2\\mathbf{1}[a_t=\\text{SH}],\\,0),\\,1\\Big)\n",
+        "$$\n",
+        "\n",
+        "\n",
+        "Explanation: We want a way to punish \"reckless\" gameplay, so this is just a term that says if you get ganked in a bad spot (e.g. trying to shove on their side) there is a penalty.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 7) *Gold-Difference Update*\n",
+        "\n",
+        "Let $g_t$ track gold difference. Update using both players' rewards:\n",
+        "\n",
+        "$$\n",
+        "g_{t+1}=g_t + \\big(r_t - r^{\\text{'}}_t\\big).\n",
+        "$$\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 8) * Objective*\n",
+        "\n",
+        "A policy $\\pi$ maps states to actions (deterministic or probabilistic):\n",
+        "\n",
+        "$$\n",
+        "\\pi(a\\mid s)=\\Pr(a_t=a\\mid s_t=s).\n",
+        "$$\n",
+        "\n",
+        "Each player aims to maximize expected discounted return over $T$ turns:\n",
+        "\n",
+        "$$\n",
+        "\\max_\\pi \\mathbb{E}\\left[\\sum_{t=0}^{T-1}\\gamma^t \\, r(s_t,a_t,b_t)\\right],\n",
+        "\\qquad 0<\\gamma\\le 1.\n",
+        "$$\n",
+        "\n",
+        "The expectation is taken over randomness in the environment (vision and gank events) and the opponent's behavior.\n",
         "\n",
         "\n",
         "\n",
@@ -177,25 +276,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Objective (What each player is optimizing)\n",
-        "\n",
-        "Defining a policy is a bit difficult, we will use a stochastic policy with probabilities, e.g. in plain english, sometimes we will freeze if the wave is on our side, sometimes we will shove, etc.\n",
-        "\n",
-        "$$\n",
-        "\\pi(a \\mid s) = \\Pr(a_t=a \\mid s_t=s), \\qquad a\\in\\{\\text{SP},\\text{SH},\\text{F}\\}.\n",
-        "$$\n",
-        "\n",
-        "Over a horizon of $T$ turns, each player aims to maximize expected discounted return,i.e. we want to maximize our total reward across *all* waves\n",
-        "\n",
-        "$$\n",
-        "\\max_{\\pi}\\;\\; \\mathbb{E}\\left[\\sum_{t=0}^{T-1} \\gamma^t\\, r(s_t,a_t,b_t)\\right],\n",
-        "\\qquad 0<\\gamma\\le 1.\n",
-        "$$\n",
-        "\n",
-        "*where gamma is our discount rate*"
+        "**Reinforcement-Learning Set-Up :**\n",
+        "We can now use some RL techniques to try and derive some (hopefully) interpretable results. We will use a style that is reflective of reality (or atleast my interpretation of such), being a **two-agent** set-up, where we train each side against a *frozen* version of the other for a set-period, before switching and training the other. I think this makes sense; in a real-game, players don't immediately adjust. We will use a **Q-learning** approach since this is more my style of coaching (i.e. we want to view the game in such a way that we will act optimally in future plays, since this is what we should strive for). Networks like DQN are definitely overkill for our purposes, although maybe this could be useful if the model were to be extended to incorporate *micro* details."
       ],
       "metadata": {
-        "id": "FjvaWgzXRn0F"
+        "id": "8Nx_5bsKS3qO"
       }
     },
     {
@@ -212,10 +297,43 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "2 phases for policies :\n",
+        "\n",
+        "1. Determinstic training phase : To reduce complexity and use our \"prior intuition\" we will use deterministic policies to train our models, e.g. always freeze when shove\n",
+        "\n",
+        "2. Stochastic training phase : After behavior starts to appear consistent, we will add in more \"stochastic\" models to introduce realism, i.e. more consistent with game theory\n",
+        "\n",
+        "At the end of these phases we will take our learned q table and interpret for results, (i.e. what is best action given state i)."
+      ],
+      "metadata": {
+        "id": "-s0L8Jp5GeBr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "7qe9nz9_HxMR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n"
+      ],
+      "metadata": {
+        "id": "xpQcaxwx9tBD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "xpQcaxwx9tBD"
+        "id": "0aBvT8DoGgBf"
       },
       "execution_count": null,
       "outputs": []
